--- a/sections/footer.liquid
+++ b/sections/footer.liquid
@@ -292,7 +292,7 @@
                 <input class="mailing-list-email input" name="contact[email]" type="email" placeholder="your@email.com" value="">
                 <input type="hidden" class="input" id="contact_tags" name="contact[tags]" value="prospect,newsletter"/>
                 <div class="mailing-list-submit">
-                  <input class="submit input" name="subscribe" type="submit" value="{{ 'general.newsletter.subscribe' | t }}">
+                  <input class="submit input Primary-Btn" name="subscribe" type="submit" value="{{ 'general.newsletter.subscribe' | t }}">
                 </div>
               </div>
             {% endform %}
