--- a/sections/page-contact.liquid
+++ b/sections/page-contact.liquid
@@ -30,7 +30,7 @@
       </div>
 
       <input type="hidden" class="comment-check input" value="" />
-      <input type="submit" class="input" value="{{ 'general.contact.submit' | t }}">
+      <input type="submit" class="input Primary-Btn" value="{{ 'general.contact.submit' | t }}">
     {% endif %}
 
   {% endform %}
