--- a/snippets/product-form-content.liquid
+++ b/snippets/product-form-content.liquid
@@ -619,7 +619,7 @@
             "
           >
             {% if selected_variant.available and template.name != 'password' %}
-              <input class="add-to-cart input" type="submit" value="{{ 'products.product.add_to_cart' | t }}" />
+              <input class="add-to-cart input Primary-Btn" type="submit" value="{{ 'products.product.add_to_cart' | t }}" />
             {% else %}
               <input class="add-to-cart disabled input" type="submit" value="{{ 'products.product.sold_out' | t }}" disabled/>
             {% endif %}
