--- a/sections/cart.liquid
+++ b/sections/cart.liquid
@@ -53,7 +53,7 @@
               <input class="cart-update button secondary input" type="submit" name="update" value="{{ 'general.general.update' | t }}">
             </noscript>
             <button
-              class="cart-checkout button"
+              class="cart-checkout button Primary-Btn"
               type="submit"
               name="checkout"
               value="{{ 'cart.general.submit' | t }}"
