--- a/sections/pxs-image-with-text-overlay.liquid
+++ b/sections/pxs-image-with-text-overlay.liquid
@@ -74,7 +74,7 @@
         {% endif %}
 
         {% if section.settings.button_text != blank %}
-          <span class="pxs-image-with-text-button">
+          <span class="pxs-image-with-text-button Secondary-Btn">
             {{ section.settings.button_text | escape }}
           </span>
         {% endif %}
