--- a/sections/pxs-image-with-text-overlay.liquid
+++ b/sections/pxs-image-with-text-overlay.liquid
@@ -45,14 +45,8 @@
         style="background-color: {{ overlay }};"
       ></div>
     {% endif %}
-
-    <div
-      class="
-        pxs-image-with-text-content-wrapper
-        pxs-image-with-text-content-position-y-{{ section.settings.content_position | split: '-' | first }}
-        pxs-image-with-text-content-position-x-{{ section.settings.content_position | split: '-' | last }}
-      "
-    >
+  </div>
+      <div class="pxs-image-with-text-content-wrapper pxs-image-with-text-content-position-y-{{ section.settings.content_position | split: '-' | first }} pxs-image-with-text-content-position-x-{{ section.settings.content_position | split: '-' | last }}">
         <div
           class="pxs-image-with-text-content"
           style="color: {{ section.settings.color }};"
@@ -74,7 +68,7 @@
         {% endif %}
 
         {% if section.settings.button_text != blank %}
-          <span class="pxs-image-with-text-button Secondary-Btn">
+          <span class="pxs-image-with-text-button">
             {{ section.settings.button_text | escape }}
           </span>
         {% endif %}
@@ -87,7 +81,6 @@
         {% endif %}
         </div>
     </div>
-  </div>
 </section>
 
 {% schema %}
@@ -117,7 +110,7 @@
           "label": "t:sections.image_with_text_overlay.section_height.option_4"
         }
       ],
-      "default": "medium"
+      "default": "original"
     },
     {
       "type": "header",
