--- a/snippets/product-list-item.liquid
+++ b/snippets/product-list-item.liquid
@@ -123,7 +123,6 @@
         {% else %}
           {{ item.vendor | link_to_vendor }}
         {% endif %}
-
       </p>
     {% endif %}
     <h2 class="product-list-item-title"><a href="{{ item.url | within: collection }}">{{ item.title }}</a></h2>
@@ -190,6 +189,29 @@
       {% comment %}Inject unit-price end{% endcomment %}
 
     {% endif %}
-  </div>
+    {% if request.page_type == 'index' %}
+      <div class="cart-btn">
+        {% assign first_available_variant = item.selected_or_first_available_variant %}
 
+        {% if first_available_variant.available %}
+          <button
+            type="button"
+            class="home-collection-add-to-cart"
+            data-variant-id="{{ first_available_variant.id }}"
+            aria-label="Add {{ item.title }} to cart"
+          >
+            Add to Cart
+          </button>
+        {% else %}
+          <button
+            type="button"
+            class="home-collection-add-to-cart disabled"
+            disabled
+          >
+            Sold Out
+          </button>
+        {% endif %}
+      </div>
+    {% endif %}
+  </div>
 </article>
